k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-ui
  template:
    metadata:
      labels:
        app: incident-ui
    spec:
      containers:
        - name: incident-ui
          image: prabhatcr001.azurecr.io/incident-ui:e067116f2909bee9e4483935709f997d5087673b
          ports:
            - containerPort: 3000
