k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-ui
spec:
  selector:
    app: incident-ui
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
